2005-02-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (expose_cb): Make sure we draw the left and bottom
	lines.

	* help/C/same-gnome.xml: More updates. Added a new figure on how
	to play.

2005-02-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c (game_over_dialog): Make sure we set the category correctly
	for the high score dialog so that if we score on one game, and
	then score in another, the correct category is shown.

	* help/C/same-gnome.xml: More work on the help file. Changed the
	screenshot graphics files.

	* drawing.c (render_cb): Added code to handle old theme names that
	may have changed. Explicitly, the removal of the -sync magic and
	the .png -> .svg changeover.

2005-02-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/same-gnome-C.omf: Updated for the new document.

2005-02-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c (build_gui): Set the size menu item correctly at start-up.

	* help/C/same-gnome.xml: Start to rewrite the manual for the new
	version.

2005-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: Patch from Nickolay V. Shmyrev to get l12n working
	properly. Also some cleanups for code that it made redundant.

2005-01-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* stones.png: Updated to use transparent backgrounds and to now
	have any animation glitches.

2005-01-21  William Jon McCann  <mccann@jhu.edu>

	* input.c (mouse_leave_cb): Only respond to normal event
	crossings.  Fixes #163963.

2005-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* stones.png: Expand to have four colours. Also pad out to have 16
	frames. There is still a glitch in the animation though.

2005-01-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c:
	* same-gnome.h:
	* drawing.c:
	* ui.c: Add support for user-supplied themes.

	* drawing.h:
	* drawing.c:
	* ui.c: Finish the theme dialog and implement theme changing.
